# CaptureCardRelay

./: .gitignore  README.md  flake.nix  meson.build
ext/include/: clay_renderer_SDL3.hpp
ext/src/: clay_renderer_SDL3.cpp
include/: Config.hpp  MainWindow.hpp  application.hpp  settings.hpp
src/: config.cpp  main.cpp  main_window.cpp  settings.cpp
src/application/: camera.cpp  events.cpp  main.cpp  render.cpp
src/application/audio/: playback.cpp  recording.cpp
